	- Added --with-proj-libdir and --with-geos-libdir configure
	  switches
	- JDBC:
	    - Improved regression tests: MultiPoint and scientific ordinates
	    - Fixed some minor bugs in jdbc code
	    - Added proper accessor functions for all fields in preparation of
	      making those fields private later
	- Support for build Tru64 build
	- Use Jade for generating documentation

PostGIS 1.1.2
2006/03/30

	- Regress tests can now be run *before* postgis intallation
	- BUGFIX in SnapToGrid() computation of output bounding box
	- More portable ./configure script
	- Changed ./run_test script to have more sane default behaviour
	- Fixed support for 64bit archs
	- jdbc2 SRID handling fixes in JTS code
	- New affine() matrix transformation functions
	- New rotate{,X,Y,Z}() function 
	- Old translating and scaling functions now use affine() internally
	- BUGFIX in EnforceRHR() 
	- Embedded access control in estimated_extent() for builds against
	  pgsql >= 8.0.0

PostGIS 1.1.1
2006/01/23

	- Source code cleanups
	- Solaris 2.7 and MingW support improvements
	- added NumInteriorRing() alias due to OpenGIS ambiguity
	- BUGFIX in geometrycollection handling of GEOS-CAPI connector
	- BUGFIX in line_locate_point()
	- Fixed handling of postgresql paths
	- Fixed a premature exit in postgis_restore.pl 
	- BUGFIX in line_substring()
	- New Z and M interpolation in line_substring()
	- New Z and M interpolation in line_interpolate_point()
	- Added support for localized cluster in regress tester

PostGIS 1.1.0
2005/12/21

	- New functions:
		- scale() and transscale() companion methods to translate()
		- line_substring() 
		- line_locate_point()
		- M(point) 
		- LineMerge(geometry) 
		- shift_longitude(geometry) 
		- azimuth(geometry) 
		- locate_along_measure(geometry, float8) 
		- locate_between_measures(geometry, float8, float8) 
		- SnapToGrid by point offset (up to 4d support)
		- BuildArea(any_geometry) 
		- OGC BdPolyFromText(linestring_wkt, srid) 