@@ -12,6 +12,7 @@ PostGIS 1.1.3CVS
 	      making those fields private later
 	- Support for build Tru64 build
 	- Use Jade for generating documentation
+	- New DumpRings() function
 
 PostGIS 1.1.2
 2006/03/30
